--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
     "postinstall": "prisma generate",
     "build": "prisma generate && prisma migrate deploy && nest build",
     "vercel-build": "prisma generate && prisma migrate deploy && nest build",
+    "prisma:deploy": "npx prisma generate && npx prisma migrate deploy",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "start": "nest start",
-    "start:dev": "nest start --watch",
-    "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/main",
+    "start": "npm run prisma:deploy && node dist/main",
+    "start:dev": "prisma generate && nest start --watch",
+    "start:debug": "prisma generate && nest start --debug --watch",
+    "start:prod": "npm run prisma:deploy && node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -27,6 +28,7 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^11.0.7",
     "@nestjs/swagger": "^11.0.3",
+    "@prisma/cli": "^2.20.1",
     "@prisma/client": "6.3.1",
     "@vercel/node": "^5.1.2",
     "class-transformer": "^0.5.1",
