--- a/package.json
+++ b/package.json
@@ -9,12 +9,11 @@
     "postinstall": "prisma generate",
     "build": "prisma generate && prisma migrate deploy && nest build",
     "vercel-build": "prisma generate && prisma migrate deploy && nest build",
-    "prisma:deploy": "npx prisma generate && npx prisma migrate deploy",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "start": "npm run prisma:deploy && node dist/main",
-    "start:dev": "prisma generate && nest start --watch",
-    "start:debug": "prisma generate && nest start --debug --watch",
-    "start:prod": "npm run prisma:deploy && node dist/main",
+    "start": "nest start",
+    "start:dev": "nest start --watch",
+    "start:debug": "nest start --debug --watch",
+    "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
