--- a/package.json
+++ b/package.json
@@ -7,13 +7,14 @@
   "license": "UNLICENSED",
   "scripts": {
     "postinstall": "prisma generate",
-    "build": "prisma generate && prisma migrate deploy && nest build",
-    "vercel-build": "prisma generate && prisma migrate deploy && nest build",
+    "build": "prisma generate && prisma migrate deploy && node ./src/prisma/seed.js && nest build",
+    "vercel-build": "prisma generate && prisma migrate deploy && node ./src/prisma/seed.js && nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
+    "seed": "ts-node ./src/prisma/seed.ts",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
