--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
   "license": "UNLICENSED",
   "scripts": {
     "postinstall": "prisma generate",
-    "build": "prisma generate && prisma migrate deploy && node ./src/prisma/seed.js && nest build",
-    "vercel-build": "prisma generate && prisma migrate deploy && node ./src/prisma/seed.js && nest build",
+    "build": "prisma generate && prisma migrate deploy && node ./src/prisma/seed.ts && nest build",
+    "vercel-build": "prisma generate && prisma migrate deploy && node ./src/prisma/seed.ts && nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
     "start:dev": "nest start --watch",
