--- a/package.json
+++ b/package.json
@@ -6,14 +6,15 @@
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
-    "build": "nest build",
-    "vercel-build": "nest build",
+    "postinstall": "npx prisma generate",
+    "build": "npx prisma generate && nest build",
+    "vercel-build": "npx prisma generate && nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "start": "nest start",
-    "start:dev": "nest start --watch",
-    "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/main",
-    "seed": "ts-node ./src/prisma/seed.ts",
+    "start": "npx prisma generate && nest start",
+    "start:dev": "npx prisma generate && nest start --watch",
+    "start:debug": "npx prisma generate && nest start --debug --watch",
+    "start:prod": "npx prisma generate && node dist/main",
+    "seed": "npx ts-node ./src/prisma/seed.ts",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
