--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "start:dev": "prisma generate && nest start --watch",
     "start:debug": "prisma generate && nest start --debug --watch",
     "start:prod": "prisma generate && node dist/main",
-    "seed": "ts-node ./src/prisma/seed.ts",
+    // "seed": "ts-node ./src/prisma/seed.ts",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
