--- a/package.json
+++ b/package.json
@@ -7,13 +7,13 @@
   "license": "UNLICENSED",
   "scripts": {
     "postinstall": "prisma generate",
-    "build": "prisma generate && nest build",
-    "vercel-build": "prisma generate && nest build",
+    "build": "prisma generate && prisma migrate deploy && nest build",
+    "vercel-build": "prisma generate && prisma migrate deploy && nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "start": "prisma generate && nest start",
-    "start:dev": "prisma generate && nest start --watch",
-    "start:debug": "prisma generate && nest start --debug --watch",
-    "start:prod": "prisma generate && node dist/main",
+    "start": "nest start",
+    "start:dev": "nest start --watch",
+    "start:debug": "nest start --debug --watch",
+    "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
