--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
-    "build": "nest build",
-    "vercel-build": "nest build",
+    "postinstall": "prisma generate && prisma migrate deploy",
+    "build": "prisma generate && prisma migrate deploy && nest build",
+    "vercel-build": "prisma generate && prisma migrate deploy && nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
     "start:dev": "nest start --watch",
