--- a/vercel.json
+++ b/vercel.json
@@ -2,14 +2,14 @@
 	"version": 2,
 	"builds": [
 		{
-			"src": "package.json",
+			"src": "src/main.ts",
 			"use": "@vercel/node"
 		}
 	],
 	"routes": [
 		{
-			"src": "/(.*)",
-			"dest": "src/main.ts"
+			"src": "/api/(.*)",
+			"dest": "/src/main.ts"
 		}
 	]
 }
