--- a/vercel.json
+++ b/vercel.json
@@ -9,7 +9,13 @@
 	"routes": [
 		{
 			"src": "/api/(.*)",
-			"dest": "/src/main.ts"
+			"dest": "/src/main.ts",
+			"methods": [
+				"GET",
+				"POST",
+				"PATCH",
+				"DELETE"
+			]
 		}
 	]
 }
